# tentacle-integration-tests

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: acceptance-internal-1517-comment.md  external-case-results-2026-07-06.md  external-case-results-2026-07-08.md  findings-to-file.md  pr-analysis.md  release-0.7.6-results-2026-07-09.md  test-plan.md  validation-results-2026-07-06.md
scripts/: run-pr-case.sh
src/: lib.rs
tests/: idle_timeout.rs  multiaddr_safety.rs  planned_pr_cases.rs  quic_service.rs  tcp_backpressure.rs  ws_frame_limit.rs
